--- a/package.json
+++ b/package.json
@@ -21,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/m-mdy-m/BaseShop/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/BaseShop#readme"
+  "homepage": "https://github.com/m-mdy-m/BaseShop#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.2"
+  }
 }
